Modernizing collection API uses