@@ -8,14 +8,14 @@ import io.agrest.annotation.AgId;
 import io.agrest.annotation.AgRelationship;
 import io.agrest.compiler.AgEntityCompiler;
 import io.agrest.compiler.AnnotationsAgEntityCompiler;
-import io.agrest.meta.AgSchema;
 import io.agrest.meta.AgEntity;
+import io.agrest.meta.AgSchema;
 import io.agrest.meta.LazySchema;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -26,8 +26,8 @@ public class ConstraintsHandlerTest {
 
     @BeforeAll
     public static void before() {
-        AgEntityCompiler compiler = new AnnotationsAgEntityCompiler(Collections.emptyMap());
-        schema = new LazySchema(Collections.singletonList(compiler));
+        AgEntityCompiler compiler = new AnnotationsAgEntityCompiler(Map.of());
+        schema = new LazySchema(List.of(compiler));
         constraintsHandler = new ConstraintsHandler();
     }
 
