@@ -15,12 +15,12 @@ import io.agrest.converter.valuestring.ValueStringConverter;
 import io.agrest.converter.valuestring.ValueStringConverters;
 import io.agrest.encoder.Encoder;
 import io.agrest.encoder.ValueEncodersProvider;
-import io.agrest.meta.AgSchema;
+import io.agrest.junit.ResourceEntityUtils;
 import io.agrest.meta.AgEntity;
+import io.agrest.meta.AgSchema;
 import io.agrest.meta.LazySchema;
 import io.agrest.processor.ProcessingContext;
 import io.agrest.runtime.semantics.RelationshipMapper;
-import io.agrest.junit.ResourceEntityUtils;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -32,6 +32,7 @@ import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -63,7 +64,7 @@ public class EncoderService_SqlDateTime_Test {
                 new RelationshipMapper());
 
         AgEntityCompiler compiler = new AnnotationsAgEntityCompiler(Collections.emptyMap());
-        AgSchema schema = new LazySchema(Collections.singletonList(compiler));
+        AgSchema schema = new LazySchema(List.of(compiler));
         this.sqlDateTimeEntity = schema.getEntity(PSqlDateTime.class);
     }
 
@@ -130,7 +131,7 @@ public class EncoderService_SqlDateTime_Test {
 
     private String toJson(Object object, ResourceEntity<?> resourceEntity) {
         Encoder encoder = encoderService.dataEncoder(resourceEntity, mock(ProcessingContext.class));
-        return Encoders.toJson(encoder, DataResponse.of(HttpStatus.OK, Collections.singletonList(object)));
+        return Encoders.toJson(encoder, DataResponse.of(HttpStatus.OK, List.of(object)));
     }
 
     public static class PSqlDateTime {
