@@ -36,9 +36,9 @@ import org.apache.cayenne.di.Injector;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.mock;
@@ -51,8 +51,8 @@ public class CreateResourceEntityStageTest {
     @BeforeAll
     public static void beforeAll() {
 
-        AgEntityCompiler compiler = new AnnotationsAgEntityCompiler(Collections.emptyMap());
-        AgSchema schema = new LazySchema(Collections.singletonList(compiler));
+        AgEntityCompiler compiler = new AnnotationsAgEntityCompiler(Map.of());
+        AgSchema schema = new LazySchema(List.of(compiler));
 
         // prepare create entity stage
         IExpMerger expMerger = new ExpMerger();
